--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -13,13 +13,13 @@ debug = 0
 # The timezone of the machine you're running the client on.
 # On most Linux/Unix systems, you can run "ls -l /etc/localtime" to see what
 # it is.
-timezone = utc
+timezone = utc+8
 # timezone = America/Los_Angeles
 
 # now you need to get a bot token.
 # https://discordapp.com/developers/docs/topics/oauth2
 # https://discordapp.com/developers/applications/me#top
-login_token = abc123
+login_token = RSSBOT
 
 # You can just leave this alone, unless you might try to run from other than
 # current directory:
