--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -138,3 +138,8 @@ fields = **title**,comments,@category,"------------------------------"
 # Admin, bots, special users, user (this is what you promote everyone to, probably automatically)
 # (tag roles here) house, jazz, piano, dubstep
 # (finally the @everyone) @everyone
+[YouTubeObsidianAnt]
+max_age = 86400
+# feed_url = https://www.youtube.com/feeds/videos.xml?user=ObsidianAnt
+feed_url = https://www.youtube.com/feeds/videos.xml?channel_id=UC6yxPVu2b52UVJQEwCTzivQ
+fields = **title**,*published*,link
