--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -19,7 +19,7 @@ timezone = utc+8
 # now you need to get a bot token.
 # https://discordapp.com/developers/docs/topics/oauth2
 # https://discordapp.com/developers/applications/me#top
-login_token = RSSBOT
+login_token = MjY0ODc3MjU2NzAxMjQ3NDk5.C0m_qA.iilmlCBL1RA568A1sJMrDXv023g
 
 # You can just leave this alone, unless you might try to run from other than
 # current directory:
